--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -8,68 +8,37 @@
 \a. \ac{nom} not attested
 \bg. jah þoei ist us Laudeikaion jus ussiggwaid\\
  and what.\ac{acc} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
- `and read that which is from Laodicea' \hfill (\ac{col} 4:16, gloss and translation by \citealt[357]{harbert1978})
+ `and read that which is from Laodicea' \flushfill{\ac{col} 4:16, after \pgcitealt{harbert1978}{357}}
 
 \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
 \a. \ac{nom} not attested
 \bg. þaimei iupa sind fraþjaiþ\\
  what.\ac{dat} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
- `set your mind on those which are above' \flushfill{(Colossians 3:2, gloss and translation by \citealt[339]{harbert1978})}
+ `set your mind on those which are above' \flushfill{\ac{col} 3:2, after \pgcitealt{harbert1978}{339}}
 
 \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
 \ag. þanei frijos siuks ist\\
  who.\ac{acc} love\scsub{[acc]} sick is\scsub{[nom]}\\
- `the one whom you love is sick' \flushfill{(John 11:3, gloss and translation by \citealt[342]{harbert1978})}
+ `the one whom you love is sick' \flushfill{\ac{john} 11:3, after \pgcitealt{harbert1978}{342}}
 \b. \ac{nom} not attested
 
 \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
 \a. \ac{acc} not attested
 \bg. hva nu wileiþ ei taujau þammei qiþiþ þiudan Iudaie?\\
  what now want that do\scsub{[dat]} who.\ac{dat} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{(Mark 15:12, gloss and translation by \citealt[339]{harbert1978})}
+ `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{\ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}
 
 \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
 \ag. iþ þammei leitil fraletada leitil frijod\\
  but who.\ac{dat} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
- `but the one whom little is forgiven loves little' \flushfill{(Luke 7:47, gloss and translation by \citealt[342]{harbert1978})}
+ `but the one whom little is forgiven loves little' \flushfill{\ac{luke} 7:47, after \pgcitealt{harbert1978}{342}}
 \b. \ac{nom} not attested
 
 \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}, is with a preposition
 \ag. ushafjands ana þammei lag\\
  {picking up}\scsub{[acc]}\scsub{[dat]} on what.\ac{dat} lay\\
- `picking up that on which he lay' \flushfill{(Luke 5:25, gloss and translation by \citealt[343]{harbert1978})}
+ `picking up that on which he lay' \flushfill{\ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}
 \b. \ac{acc} not attested
-
-\begin{filecontents}{case-attraction-gothic.tex}
-\begin{table}[h]
-  \center
-  \caption {Case attraction in headless relatives in Gothic}
-    \begin{tabular}{c|c|c|c}
-      \toprule
-        \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
-            & [\ac{nom}]
-            & [\ac{acc}]
-            & [\ac{dat}]
-            \\ \cmidrule{1-4}
-        [\ac{nom}]
-            & \colorbox{LG}{\ac{nom}}
-            & \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{acc}}}
-            & \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{dat}}}
-            \\ \cmidrule{1-4}
-        [\ac{acc}]
-            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{?\ac{nom}}
-            &	\colorbox{LG}{\ac{acc}}
-            &	\diagbox[linecolor=white]{?\ac{acc}}{\colorbox{DG}{\ac{dat}}}
-            \\ \cmidrule{1-4}
-        [\ac{dat}]
-            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{nom}}
-            &	\diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{acc}}
-            & \colorbox{LG}{\ac{dat}}
-            \\
-      \bottomrule
-    \end{tabular}
-\end{table}
-\end{filecontents}
 
 \input{case-attraction-gothic.tex}
 
