--- a/fenna-files/primary-texts.sty
+++ b/fenna-files/primary-texts.sty
@@ -1,18 +1,24 @@
 \DeclareAcronym{col}{
   short = Col ,
   long  = Colossians ,
-  cite =  bergsma2019 ,
-  class = nomencl
+  % cite =  bergsma2019 ,
+  class = texts
 }
 
-\DeclareAcronym{numofangels}{
-  short = \ensuremath{N} ,
-  long  = The number of angels per needle point ,
-  class = nomencl
+\DeclareAcronym{john}{
+  short = John ,
+  long  = John ,
+  class = texts
 }
 
-\DeclareAcronym{areaofneedle}{
-  short = \ensuremath{A} ,
-  long  = The area of the needle point ,
-  class = nomencl
+\DeclareAcronym{mark}{
+  short = Mark ,
+  long  = Mark ,
+  class = texts
+}
+
+\DeclareAcronym{luke}{
+  short = Luke ,
+  long  = Luke ,
+  class = texts
 }
