--- a/thesis.tex
+++ b/thesis.tex
@@ -6,14 +6,13 @@
 \usepackage{fenna-files/primary-texts}
 \usepackage{fenna-files/commands}
 
+\renewcommand{\arraystretch}{1.25}
+
 \title{Case attraction in headless relatives}
 \author{Fenna Bergsma}
 \date{\today}
 
 \begin{document}
-
- \ac{numofangels} and \ac{areaofneedle} are part of the
-nomenclature
 
 \maketitle
 
@@ -39,7 +38,7 @@ nomenclature
 
 \clearpage
 \chapter*{Primary texts}
-\printacronyms[include-classes=nomencl, heading=none]
+\printacronyms[include-classes=texts, heading=none]
 \addcontentsline{toc}{chapter}{Primary texts}
 
 \printbibliography
