--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -3,6 +3,7 @@
 \chapter{Direction of attraction}
 
 
+
 \section{The typology}
 Old High German only has proper attraction. Modern German only has inverse attraction. Gothic has both proper and inverse attraction.
 
@@ -12,7 +13,7 @@ Old High German only has proper attraction. Modern German only has inverse attra
 	\caption {\ac{int} vs. \ac{ext} in Modern and Old High German and Gothic}
 		\begin{tabular}{ccc}
 		\toprule
-		 								& \ac{int}>\ac{ext}				& \ac{ext}>\ac{int}				\\
+		 								& \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}				\\
 										& inverse attraction	& proper attraction		\\
 										\cmidrule{2-3}
 		Modern German 	& ✔			 							&	*										\\
@@ -37,17 +38,17 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \a. \ac{nom} not attested
 \bg. ih bibringu fona Juda dhen mina berga chisetzit\\
  I educate\scsub{[acc]} about Juda who.\ac{acc} my mountains {through pull}\scsub{[nom]}\\
- `I educate the one who wanders through my mountains about Judas' \flushfill{(Old High German, Isidor 34:3, \citealt[761]{behaghel1923})}
+ `I educate the one who wanders through my mountains about Judas' \flushfill{Old High German, Isidor 34:3, \citealt[761]{behaghel1923}}
 
 \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
 \a. \ac{nom} not attested
 \bg. aer antuurta demo zaimo sprah\\
  he replied\scsub{[dat]} who.\ac{dat} {to him} spoke\scsub{[nom]}\\
- `he replied to the one who spoke to him' \flushfill{(Old High German, Monsee Fragments 7:24, \citealt[761]{behaghel1923}, gloss and translation by \citealt[199]{pittner1995})}
+ `he replied to the one who spoke to him' \flushfill{Old High German, Monsee Fragments 7:24, \citealt[761]{behaghel1923}, gloss and translation by \citealt[199]{pittner1995}}
 \bg. gebe themo ni eigi\\
  give\scsub{[dat]} who.\ac{dat} not posses\scsub{[nom]}\\
- `give to the one who does not have' \flushfill{(Old High German, Otfrid I 24:77)}\\
- `gebe dem der nicht hat' \flushfill{(translation by Schrodt, 175)}
+ `give to the one who does not have' \flushfill{Old High German, Otfrid I 24:77)}\\
+ `gebe dem der nicht hat' \flushfill{translation by Schrodt, 175)}
 
 \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
 \a. \ac{acc} not attested
@@ -57,7 +58,7 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \a. \ac{acc} not attested
 \bg. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
  {are you} superior\scsub{[dat]} {to Abraham} also who.\ac{dat} one here now named\scsub{[acc]}\\
- `are you superior to Abraham to those which they just mentioned?' \flushfill{(Old High German, Otfrid III 18:33, \citealt[761]{behaghel1923})}
+ `are you superior to Abraham to those which they just mentioned?' \flushfill{Old High German, Otfrid III 18:33, \citealt[761]{behaghel1923}}
 
 \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
 \a. \ac{dat} not attested
@@ -76,22 +77,22 @@ Don't know:
 \ex. Old High German
 \ag. gaat uz diu halt za dem iz forchaufent\\
  \\
- `' \flushfill{(Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})}
+ `' \flushfill{Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923}}
 \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
  \\
- `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{(Old High German, Tatian 118,1, \citealt[761]{behaghel1923})}
+ `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{Old High German, Tatian 118,1, \citealt[761]{behaghel1923}}
 \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
  \\
- `' \flushfill{(Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})}
+ `' \flushfill{Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923}}
 \bg. thia laz ih themo iz lisit thar\\
  \\
- `' \flushfill{(Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})}
+ `' \flushfill{Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923}}
 \bg. noh so neduohti in gnuoge des si habetin\\
  \\
- `' \flushfill{(Old High German, Notker I,63,29, \citealt[761]{behaghel1923})}
+ `' \flushfill{Old High German, Notker I,63,29, \citealt[761]{behaghel1923}}
 \bg. tannoh pito ih tes noh fore ist (id quod)\\
  \\
- `' \flushfill{(Old High German, Notker 193,19, \citealt[761]{behaghel1923})}
+ `' \flushfill{Old High German, Notker 193,19, \citealt[761]{behaghel1923}}
 
 So, to sum up:
 
@@ -296,7 +297,7 @@ In Old High German, proper attraction in headless relatives can be derived from 
 \ex. \ac{acc} instead of \ac{nom}
 \ag. unde ne wolden níet besên den mort den dô was geschên\\
  and not wanted not see the murder.\ac{acc} that.\ac{acc} there had happened\\
- `and they didn't want to see the murder that had happened.' \flushfill{(Middle High German, Nibelungenlied 1391,14, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995})}
+ `and they didn't want to see the murder that had happened.' \flushfill{Middle High German, Nibelungenlied 1391,14, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995}}
 
 
 
