mooi georganiseerd, fena
jaaa, supernetjes!

--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -1,3 +1,5 @@
+%%%abbreviations%%%
+
 \DeclareAcronym{nom}{
   short = \tsc{nom} ,
   long  = nominative ,
@@ -86,4 +88,73 @@
   short = \tsc{ext} ,
   long  = external case ,
   class = abbr
+}
+
+\DeclareAcronym{ohg}{
+  short = OHG ,
+  long  = Old High German ,
+  class = abbr
+}
+
+\DeclareAcronym{mg}{
+  short = MG ,
+  long  = Modern German ,
+  class = abbr
+}
+
+
+
+
+
+
+
+%%%texts%%%
+
+\DeclareAcronym{col}{
+  short = Col ,
+  long  = {Colossians, New Testament} ,
+  % cite =  bergsma2019 ,
+  class = texts
+}
+
+\DeclareAcronym{john}{
+  short = John ,
+  long  = {John, New Testament} ,
+  class = texts
+}
+
+\DeclareAcronym{mark}{
+  short = Mark ,
+  long  = {Mark, New Testament} ,
+  class = texts
+}
+
+\DeclareAcronym{luke}{
+  short = Luke ,
+  long  = {Luke, New Testament} ,
+  class = texts
+}
+
+\DeclareAcronym{isid}{
+  short = Isid. ,
+  long  = Der althochdeutsche Isidor ,
+  class = texts
+}
+
+\DeclareAcronym{mons}{
+  short = Mons. ,
+  long  = The Monsee fragments ,
+  class = texts
+}
+
+\DeclareAcronym{otfrid}{
+  short = Otfrid ,
+  long  = Otfrid's Evangelienbuch ,
+  class = texts
+}
+
+\DeclareAcronym{nib}{
+  short = Nib. ,
+  long  = Das Nibelungenlied ,
+  class = texts
 }
