--- a/introduction.tex
+++ b/introduction.tex
@@ -1,14 +1,8 @@
 % !TEX root = thesis.tex
 
-\newchapter{Introduction}
+\chapter{Introduction}
 
-The topic of this thesis is case attraction in headless relative clauses. First I talk about the role of case in language. Second I discuss regular headed relative clauses and how they handle case. Third I introduce a phenomenon called case attraction in headed relative clause. Finally, I get to headless relative clauses that show case attraction.
-
-
-\section{Explaining the title}
-
-
-\subsection{Case attraction}
+--general intro--
 
 Languages can use case to mark the grammatical role of a noun phrase in a clause. Consider the two Modern German sentences in \ref{ex:germancase}. In \ref{ex:germancase1}, \tit{der Lehrer} `the teacher' is marked nominative, and it is the subject. \tit{Den Schüler} `the student' is marked accusative, and it is an object. In \ref{ex:germancase2}, the roles are reversed: \tit{der Schüler} `the student' is marked nominative and it is the subject, and \tit{den Lehrer} `the teacher' is marked accusative and it is the object. Notice also that the subject precedes the predicate \tit{mag} `likes' and the object follows it.
 
@@ -31,53 +25,23 @@ In \ref{ex:germanrelative2}, the relative pronoun \tit{den} `that.\tsc{m.acc}' i
  the.\tsc{m.nom} teacher likes the.\tsc{m.acc} student that.\tsc{m.acc} he {at the} {hide-and-seek game} seeks\\
  `The teacher likes the student that he is looking for playing hide-and-seek.'\label{ex:germanrelative2}
 
---from here on it still needs working out--
+%%work out after this
+If there is no head, we have a headless relative
+in these, there is only one place for the case.
 
-This pattern occurs in German, most other modern languages. In some ancient languages the relative pronoun did not take the case of the grammatical role in its own clause. Instead, it agrees in case with its antecedent. This is called case attraction. The relative pronoun is attracted to its antecedent(?).
+--give example of a matching one--
 
-\exg. sie gedâht' ouch maniger leide, der ir dâ héimé geschach.\\
-she thought\scsub{gen} also some.\tsc{gen} sufferings.\tsc{gen} which.\tsc{gen} her at home happened\scsub{nom}\\
-`She thought about some misfortunes that happened to her at home'\hfill attraction headed relative
+then the cases can differ
+then, there is a case conflict
 
-there is a generalization here: more complex case wins. maybe don't mention that here yet.
+there we have case competition in headless relatives
+this thesis discusses different aspects of this phenomenon
 
+first, what holds for all languages is that there is a single order: highest in the hierarchy wins
+in the first part, I..
 
-\subsection{Headless relatives}
+secondly I adress an aspect that differs across languages
+that is, not all languages are like gothic
+I connect this crosslinguistic variation to morphology.. so i reduce it to differences in the lexicon
 
-So far I discussed headed relatives. Headless relatives also exist. The antecedent is missing. We also observe case attraction there. It is less easy to see because the antecedent NP is missing, but we know what's going on because of the case requirements of the predicates. So this actually means is that the relative pronoun takes the case from the main clause (where normally the antecedent was). This is called proper attraction.
-
-\exg. Aer antuurta demo zaimo sprah.\\
-he replied\scsub{dat} who.\tsc{dat} {to him} spoke\scsub{nom}\\
-`He replied to the one who spoke to him.'\hfill proper attraction headless relative
-
-
-
-\section{Three topics}
-
-Here comes the introduction to a part that discusses three problems. These problems are what I will discuss in my dissertation. What will be here is connecting these problems to the real world. Why do we care about these? What are these problems going to inform us about?
-
-\subsection{Case complexity}
-
-case attraction always follows the hierarchy
-
-
-
-\subsection{Direction of attraction}
-
-case attraction can go two ways
-
-\exg. Aer antuurta demo zaimo sprah.\\
-he replied\scsub{dat} who.\tsc{dat} {to him} spoke\scsub{nom}\\
-`He replied to the one who spoke to him.'\hfill proper attraction headless relative
-
-\exg. Ich {lade ein}, wem Maria vertraut. \\
-I invite\scsub{acc} who.\tsc{dat} also Maria trusts\scsub{dat}\\
-`I invite whoever Maria also trusts.' \hfill invserse attraction headless relative
-
-the morphology of the relative pronouns decides which one is possible
-
-
-
-\subsection{Prepositions}
-
-and r-pronouns
+finally, i show how all of this can be derived in derivations
