--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -1,33 +1,113 @@
-%%%font%%%
+%%%FONTS%%%
 \usepackage{libertine}%font supporting unicode
 \usepackage[normalem]{ulem}%strikethrough
+\newcommand{\tit}[1]{\textit{#1}}%shorter italics
+\newcommand{\tbf}[1]{\textbf{#1}}%shorter boldface
+\newcommand{\tsc}[1]{\textsc{#1}}%shorter small caps
+\newcommand{\scsub}[1]{\tsc{\textsubscript{#1}}}%shorter small caps in subscript
+%%%FONTS%%%
 
+
+%%%SPACING/BREAKING%%%
 \OnehalfSpacing*
+\sloppy%%%overfull%%%
+%%%SPACING/BREAKING%%%
 
-%%%depth up to subsections also in toc%%%
-\setcounter{secnumdepth}{4}
-\setcounter{tocdepth}{2}
 
-%%%trees%%%
+%%%TREES%%%
 \usepackage[linguistics]{forest}
 \forestset{
 boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 }
+%%%TREES%%%
 
-%%%tables%%%
+
+%%%TABLES%%%
 \usepackage{diagbox}%diagonals
-\usepackage{tabularx,booktabs}%pretty tables
-\newcolumntype{Y}{>{\centering\arraybackslash}X}
-\newcolumntype{Z}{>{\arraybackslash}X}
 \usepackage{color, colortbl}
 \definecolor{LG}{gray}{0.8}
 \definecolor{DG}{gray}{0.5}
 \usepackage{multirow}
+\renewcommand{\arraystretch}{1.2}
+%%%TABLES%%%
 
-%%%bibliography%%%
+
+%%%%REFERENCES%%%
 \usepackage[backend=biber,style=authoryear,natbib=true]{biblatex}
+\newcommand{\posscitet}[1]{\citeauthor{#1}'s (\citeyear{#1})}
+\newcommand{\posscitealt}[1]{\citeauthor{#1}'s \citeyear{#1}}
+\newcommand{\possciteauthor}[1]{\citeauthor{#1}'s}
+\newcommand{\pgposscitet}[2]{\citeauthor{#1}'s (\citeyear{#1}:~#2)}
+\newcommand{\secposscitet}[2]{\citeauthor{#1}'s (\citeyear{#1}:~$\S$#2)}
+\newcommand{\pgcitealt}[2]{\citealt{#1}:~#2}
+\newcommand{\seccitealt}[2]{\citealt{#1}:~$\S$#2}
+\newcommand{\pgcitep}[2]{(\citealt{#1}:~#2)}
+\newcommand{\seccitep}[2]{(\citealt{#1}:~$\S$#2)}
+\newcommand{\pgcitet}[2]{\citeauthor{#1} (\citeyear{#1}:~#2)}
+\newcommand{\seccitet}[2]{\citeauthor{#1} (\citeyear{#1}:~$\S$#2)}
+%%%%REFERENCES%%%
 
+
+%%%ABBREVIATIONS%%%
 \usepackage{acro}
-% probably a good idea for the nomenclature entries:
 \acsetup{first-style=short, cite=all, list-style=tabular}
 \DeclareInstance{acro-title}{empty}{sectioning}{name-format =}
+%%%ABBREVIATIONS%%%
+
+
+%%%EXAMPLES%%%
+\usepackage{linguex}
+\renewcommand{\firstrefdash}{}
+\renewcommand{\eachwordtwo}{\rule[-7pt]{0pt}{0pt}}%%%set spacing from document between gloss and translation%%%
+\nosinglegloss%%%allow spacing from document between example and gloss%%%
+\newcommand{\flushfill}[1]{\hspace{\fill}\mbox{}\linebreak[0]\hspace*{\fill}(\mbox{#1})}%%%hfill on the next line if too long%%%
+% \renewenvironment{flushleft}{\raggedright}{}%make sure ex + gll also works
+
+%%do not allow breaks within examples%%%
+\makeatletter
+\apptocmd{\gl@stop}{\nobreak}{}{}
+\makeatother
+%%%EXAMPLES%%%
+
+
+
+%%%%%TABLE OF CONTENTS%%%
+%%%depth up to subsections also in toc%%%
+\setcounter{secnumdepth}{4}
+\setcounter{tocdepth}{2}
+%%%%%TABLE OF CONTENTS%%%
+
+
+
+%%%%%LIST OF TABLES%%%
+\renewcommand{\listtablename}{List of tables}%%%no capitals in headers%%%
+
+%%%automatically put chapter headings in lot%%%
+\usepackage{etoolbox}
+\providebool{newchap}
+\newcommand{\newchapter}[1]{%
+    \chapter{#1}
+    \global\setbool{newchap}{true}
+}
+\let\oldcaption\caption
+\renewcommand{\caption}[2][\shortcaption]{%
+\def\shortcaption{#2}
+\ifbool{newchap}{%
+    \addtocontents{lot}{\protect\contentsline{chapter}{%
+        Chapter \thechapter \vspace{10pt}
+    }{}}}{}
+    \global\boolfalse{newchap}
+    \oldcaption[#1]{#2}
+}
+\makeatletter
+\newcommand{\saved@chapter}{}
+\let\saved@chapter\chapter
+\renewcommand{\chapter}{%
+  \@ifstar {\saved@chapter*}{\@dblarg\my@chapter}%
+}
+\newcommand*{\my@chapter}[2][]{%
+  \saved@chapter[#1]{#2}%
+  \global\setbool{newchap}{true}
+}
+\makeatother
+%%%LIST OF TABLES%%%
