--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -63,7 +63,7 @@
 
 \pgcitealt{nikolaeva1999}{16}
 
-\begin{table}[h]
+\begin{table}[H]
   \center
 	\caption {Transparent case containment in Khanty}
 		\begin{tabular}{clll}
@@ -88,7 +88,7 @@
 
 \pgcitealt{boretzky1994}{31-46}
 
-\begin{table}[h]
+\begin{table}[H]
   \center
 	\caption {Transparent case containment in Kalderaš Romani}
 		\begin{tabular}{cllll}
@@ -116,7 +116,7 @@
 
 \pgcitealt{gippert1987}{23-24}
 
-\begin{table}[h]
+\begin{table}[H]
   \center
 	\caption {Transparent case containment in West Tocharian}
 		\begin{tabular}{cll}
@@ -152,7 +152,7 @@ cognates across Slavic - Russian\\
 cognates across Slavic - Serbian
 
 
-\begin{table}[h]
+\begin{table}[H]
   \center
 	\caption {ABB patterns in suppletion}
 		\begin{tabular}{cccccc}
@@ -172,7 +172,7 @@ cognates across Slavic - Serbian
 
 \subsubsection{ABC}
 
-\begin{table}[h]
+\begin{table}[H]
   \center
 	\caption {ABC patterns in suppletion}
 		\begin{tabular}{ccc}
@@ -193,7 +193,7 @@ cognates across Slavic - Serbian
 \subsubsection{AAB}
 
 
-\begin{table}[h]
+\begin{table}[H]
   \center
 	\caption {AAB patterns in suppletion}
 		\begin{tabular}{cccc}
