--- a/tables/gothic-grammaticality.tex
+++ b/tables/gothic-grammaticality.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\begin{table}[h]
+\begin{table}[H]
   \center
   \caption {Case attraction in headless relatives in Gothic}
     \begin{tabular}{c|c|c|c}
