--- a/variation.tex
+++ b/variation.tex
@@ -8,19 +8,20 @@
 In Gothic, the more complex case wins.
 In \ac{ohg}, the more complex case wins, only if it is external.
 In \ac{mg}, the more complex case wins, only if it is internal.
+In Italian, case mismatch is not allowed.
 
 
-\begin{table}[h]
+\begin{table}[H]
 	\center
-	\caption {\ac{int} vs. \ac{ext} in \ac{mg} and \ac{ohg} and Gothic}
+	\caption {Variation}
 		\begin{tabular}{ccc}
 		\toprule
-		 					& \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}		\\
-							& inverse attraction	& proper attraction		\\
+		 					& \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	\\
 								\cmidrule{2-3}
-		\ac{mg} 	& ✔			 							&	*										\\
-		\ac{ohg}	& *										&	✔										\\
-		Gothic		&	✔										&	✔										\\
+		\ac{mg} 	& ✔			 							&	*									\\
+		\ac{ohg}	& *										&	✔									\\
+		Gothic		&	✔										&	✔									\\
+		Italian		&	*										& *									\\
 		\bottomrule
 		\end{tabular}
 \end{table}
@@ -94,7 +95,7 @@ So, to sum up:
 
 
 
-\begin{table}[h]
+\begin{table}[H]
   \center
   \caption {Case attraction in headless relatives in \ac{ohg}}
     \begin{tabular}{c|c|c|c}
@@ -177,7 +178,7 @@ So, to sum up:
  `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}
 
 
- \begin{table}[h]
+ \begin{table}[H]
    \center
    \caption {Case attraction in headless relatives in \ac{mg}}
      \begin{tabular}{c|c|c|c}
@@ -211,37 +212,30 @@ So, to sum up:
 
 
 
-  \section{Shape of relative pronoun}
-\ac{ohg} has a d-pronoun. \ac{mg} has a wh-pronoun. Gothic has a d-pronoun plus a caseless relativizer.
+\section{Shape of relative pronoun}
 
-
-\subsection{\tsc{d} in Old High German}
-
-\begin{table}[h]\label{tbl:paradigmohg}
+\begin{table}[H]
 	\center
-	\caption {Relative pronouns in headless relatives in \ac{ohg}}
-		\begin{tabular}{cccc}
+	\caption {Shape of relative pronoun per language}
+		\begin{tabular}{ccc}
 		\toprule
-							& \ac{n}.\ac{sg}	& \ac{m}.\ac{sg}  & \ac{f}.\ac{sg}	\\
-								\cmidrule{2-4}
-		\ac{nom}	& d-aȥ          	& d-ër       			& d-iu						\\
-		\ac{acc}	& d-aȥ   					& d-ën						& d-ea/-ia/(-ie)	\\
-		\ac{dat}	& d-ëmu/-ëmo	    & d-ëmu/-ëmo			& d-ëru/-ëro			\\
+							& rel pron in headless rel	& rel prons in light-headed rel		\\
+		\midrule
+		Gothic		& \tsc{d} +\tsc{comp}				&	\tsc{d} + \tsc{d} + \tsc{comp}	\\
+		\ac{ohg}	&	\tsc{d} 									&	\tsc{d} + \tsc{d} 							\\
+		\ac{mg}		& \tsc{wh} 									&	\tsc{d} + \tsc{d} 							\\
+		Italian		& \tsc{wh} 									&	\tsc{d} + \tsc{wh} 							\\
 		\bottomrule
-	    				& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}  	& \ac{f}.\ac{pl}	\\
-	    					\cmidrule{2-4}
-    \ac{nom} 	& d-iu/-ei   			&  d-ē/-ea/-ia/-ie	& d-eo/-io        \\
-    \ac{acc} 	& d-iu/-ei   			&  d-ē/-ea/-ia/-ie	& d-eo/-io        \\
-    \ac{dat} 	& d-ēm/-ēn   			&  d-ēm/-ēn       	& d-ēm/-ēn        \\
-    \bottomrule
-		\end{tabular}
+	\end{tabular}
 \end{table}
 
+\subsection{Gothic}
 
-\subsection{\tsc{d} + \tsc{comp} in Gothic}
+\subsubsection{Headless relatives}
 
+\tsc{d} + \tsc{comp}
 
-\begin{table}[h]
+\begin{table}[H]
 	\center
 	\caption {Relative pronouns in headless relatives in Gothic}
 		\begin{tabular}{cccc}
@@ -261,10 +255,53 @@ So, to sum up:
 		\end{tabular}
 \end{table}
 
+\subsubsection{Light-headed relatives}
 
-\subsection{\tsc{wh} in Modern German}
+\tsc{d}, \tsc{d} + \tsc{comp}
 
-\begin{table}[h]
+
+
+\subsection{Old High German}
+
+\subsubsection{Headless relatives}
+
+\tsc{d}
+
+\begin{table}[H]\label{tbl:paradigmohg}
+	\center
+	\caption {Relative pronouns in headless relatives in \ac{ohg}}
+		\begin{tabular}{cccc}
+		\toprule
+							& \ac{n}.\ac{sg}	& \ac{m}.\ac{sg}  & \ac{f}.\ac{sg}	\\
+								\cmidrule{2-4}
+		\ac{nom}	& d-aȥ          	& d-ër       			& d-iu						\\
+		\ac{acc}	& d-aȥ   					& d-ën						& d-ea/-ia/(-ie)	\\
+		\ac{dat}	& d-ëmu/-ëmo	    & d-ëmu/-ëmo			& d-ëru/-ëro			\\
+		\bottomrule
+	    				& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}  	& \ac{f}.\ac{pl}	\\
+	    					\cmidrule{2-4}
+    \ac{nom} 	& d-iu/-ei   			&  d-ē/-ea/-ia/-ie	& d-eo/-io        \\
+    \ac{acc} 	& d-iu/-ei   			&  d-ē/-ea/-ia/-ie	& d-eo/-io        \\
+    \ac{dat} 	& d-ēm/-ēn   			&  d-ēm/-ēn       	& d-ēm/-ēn        \\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+\subsubsection{Light-headed relatives}
+
+\tsc{d}, \tsc{d}
+
+
+
+
+
+\subsection{Modern German}
+
+\subsubsection{Headless relatives}
+
+\tsc{wh}
+
+\begin{table}[H]
 	\center
 	\caption {Relative pronouns in headless relatives in \ac{mg}}
 		\begin{tabular}{ccc}
@@ -277,3 +314,40 @@ So, to sum up:
 		\bottomrule
 		\end{tabular}
 \end{table}
+
+\subsubsection{Light-headed relatives}
+
+Pattern in light-headed relatives: \tsc{d}, \tsc{d}
+
+
+
+
+\subsection{Italian}
+
+\subsubsection{Headless relatives}
+
+\tsc{wh}: \tit{che}
+
+\subsubsection{Light-headed relatives}
+
+\tsc{d}, \tsc{wh}: \tit{quello}, \tit{che}
+
+
+\section{Bringing this together}
+
+\begin{table}[H]
+	\center
+	\caption {Variation and relative pronoun shape}
+		\begin{tabular}{ccccc}
+		\toprule
+							&	rel pron in headless rel	& rel prons in light-headed rel		& \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	\\
+		\midrule
+		Gothic 		& \tsc{d} +\tsc{comp}				&	\tsc{d} + \tsc{d} + \tsc{comp}	& ✔										&	✔									\\
+		\ac{ohg}	& \tsc{d} 									&	\tsc{d} + \tsc{d} 							& *										&	✔									\\
+		\ac{mg}		&	\tsc{wh} 									&	\tsc{d} + \tsc{d} 							& ✔										&	*									\\
+		Italian		& \tsc{wh} 									&	\tsc{d} + \tsc{wh} 							& *										&	*									\\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+And how can we now derive this?
