--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -5,6 +5,7 @@
 \newcommand{\tbf}[1]{\textbf{#1}}%shorter boldface
 \newcommand{\tsc}[1]{\textsc{#1}}%shorter small caps
 \newcommand{\scsub}[1]{\tsc{\textsubscript{#1}}}%shorter small caps in subscript
+\nouppercaseheads%no upper case in headers memoir
 %%%FONTS%%%
 
 
@@ -77,7 +78,7 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 %%%depth up to subsections also in toc%%%
 \mainmatter
 \setcounter{secnumdepth}{4}
-\setcounter{tocdepth}{3}
+\setcounter{tocdepth}{2}
 %%%%%TABLE OF CONTENTS%%%
 
 
